[package]
name = "torrentclient"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_bytes = "0.11"
serde_derive = "^1.0.0"
bincode = "1.3.3"
sha-1 = "0.10.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking"] }
byteorder = "1.4.3"
crossbeam-channel = "0.5.5"
bit-vec = "0.6.3"
percent-encoding = "2.1.0"
lazy_static = "1.4.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.3"