[package]
name = "wasmtorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_bencode = "^0.2.3"
serde = "^1.0.0"
serde_bytes = "0.11"
serde_derive = "^1.0.0"
bincode = "1.3.3"
sha-1 = "0.10.0"
rand = "0.8.5"
byteorder = "1.4.3"
crossbeam-channel = "0.5.5"
bit-vec = "0.6.3"
percent-encoding = "2.1.0"
log = "0.4"
lazy_static = "1.4.0"

futures = "0.3.21"
tokio = { version = "1", features = ["io-util", "sync", "macros"] }

async-trait = "0.1.57"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { features = [
    "EventTarget",
    "RtcDataChannelEvent",
    "RtcDataChannel",
    "AddEventListenerOptions",
    "MessageEvent",
    "RtcDataChannelType",
]}
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59"
getrandom = { version = "0.2", features = ["js"] }