[package]
name = "filesharing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmtorrent = { path = '../../'}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.32"

futures = "0.3.21"

async-stream = "0.3.3"

log = "0.4"
console_log = { version = "0.2", features = ["color"] }

[dependencies.web-sys]
features = [
    "RtcDataChannel",
    "CustomEvent",
]
