[package]
name = "filesharing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmtorrent = { path = '../../'}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.32"

futures = "0.3.21"

async-stream = "0.3.3"

log = "0.4"
console_log = { version = "0.2", features = ["color"] }
# wasm-logger = "0.2.0"

wasm-bindgen-test = "0.3.0"
js-sys = "0.3"
tokio = { version = "1", features = ["io-util", "sync"] }

[dependencies.web-sys]
features = [
    "RtcDataChannel",
    "RtcPeerConnection",
    "RtcSignalingState",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcPeerConnectionIceEvent",
    "RtcIceCandidate",
    "RtcDataChannel",
    "RtcDataChannelEvent",
    "RtcDataChannelInit",
    "CustomEvent",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Window",
    "Location"
]
