[package]
name = "test-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtorrent = { path = "../.." }
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2.3"
tokio = { version = "1.40.0", features = ["full"] }
serde_bencode = "^0.2.3"
crossbeam-channel = "0.5.5"
clap = { version = "3.2.14", features = ["derive"] }
futures = "0.3.31"

bincode = "1.3.3"